simple UI and GBUFFER PASS

--- a/project/src/editor/imgui.ini
+++ b/project/src/editor/imgui.ini
@@ -7,10 +7,18 @@ Pos=78,26
 Size=153,514
 
 [Window][Hello, world!]
-Pos=2,5
+Pos=3,6
 Size=328,973
 
 [Window][Scene View]
-Pos=386,36
-Size=1219,683
+Pos=332,6
+Size=173,607
+
+[Window][Setting]
+Pos=106,81
+Size=100,300
+
+[Window][SceneView]
+Pos=93,13
+Size=500,600
 
